Use fully-qualified image names in `distrobox.ini`
Short name resolution fails in the automated setup script.

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -4,7 +4,7 @@
 [dev]
 # @note `gcc` is a runtime requirement of Treesitter in Neovim.
 # @note `zsh` should probably be a host layer.
-image=fedora-toolbox:latest
+image=quay.io/fedora/fedora-toolbox:42
 additional_packages="bat fd-find fzf gcc git ripgrep stow tmux wl-clipboard zsh"
 
 # -----------------------------------------------------------------------------
@@ -13,10 +13,10 @@ additional_packages="bat fd-find fzf gcc git ripgrep stow tmux wl-clipboard zsh"
 # -----------------------------------------------------------------------------
 [build-mise-erlang]
 # @note This assumes we are building Erlang with Mise. Refer to the README for details.
-image=fedora-toolbox:latest
+image=quay.io/fedora/fedora-toolbox:42
 additional_packages="autoconf automake g++ ncurses-devel openssl-devel"
 
 [build-neovim]
 # @see https://github.com/neovim/neovim/blob/master/BUILD.md#build-prerequisites
-image=fedora-toolbox:latest
+image=quay.io/fedora/fedora-toolbox:42
 additional_packages="cmake curl gcc gettext git glibc-gconv-extra make ninja-build"
