--- a/distrobox.ini
+++ b/distrobox.ini
@@ -6,6 +6,7 @@
 # @note `zsh` should probably be a host layer.
 image=quay.io/fedora/fedora-toolbox:42
 additional_packages="bat fd-find fzf gcc git ripgrep stow tmux wl-clipboard zsh"
+init_hooks="chsh -s $(which zsh)"
 
 # -----------------------------------------------------------------------------
 # "Build" containers isolate dependencies that are only required
@@ -14,9 +15,11 @@ additional_packages="bat fd-find fzf gcc git ripgrep stow tmux wl-clipboard zsh"
 [build-mise-erlang]
 # @note This assumes we are building Erlang with Mise. Refer to the README for details.
 image=quay.io/fedora/fedora-toolbox:42
-additional_packages="autoconf automake g++ ncurses-devel openssl-devel"
+additional_packages="autoconf automake g++ ncurses-devel openssl-devel zsh"
+init_hooks="chsh -s $(which zsh)"
 
 [build-neovim]
 # @see https://github.com/neovim/neovim/blob/master/BUILD.md#build-prerequisites
 image=quay.io/fedora/fedora-toolbox:42
-additional_packages="cmake curl gcc gettext git glibc-gconv-extra make ninja-build"
+additional_packages="cmake curl gcc gettext git glibc-gconv-extra make ninja-build zsh"
+init_hooks="chsh -s $(which zsh)"
